# Rivet

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
src/rivet/: main.py
src/rivet/cli/: render.py  ui.py
src/rivet/core/: agent.py  inference.py  schema.py
src/rivet/tools/: sandbox.py  scrape.py  slicer.py  url_processor.py
src/rivet/utils/: code_cleaner.py  config.py  errors.py  logging.py  prompts.py
