[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rivet-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Yash Ghogre", email = "yashghogre100@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "langgraph>=1.0.4",
    "langsmith>=0.4.49",
    "openai>=2.9.0",
    "platformdirs>=4.5.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
rivet = "rivet.main:app"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rivet"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
